# rspell

./: Cargo.toml  some_test_words.txt  training2.txt
src/: lib.rs  main.rs
src/rspell/: word_reader.rs
