[package]
name = "rspell"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.27", features = ["derive", "cargo", "unicode"] }
unicode-segmentation = "1.12.0"
distance = "0.4.0"

[dev-dependencies]
assert_fs = "1.1.2"
predicates = "3.1.3"
test-case = "3.3.1"
mockall = "0.13.1"
